# plexenca

./: CMakeLists.txt  config.h.in
lib/: internal.h
vc11/: enca.def  enca.sln  enca.vcxproj  enca.vcxproj.filters
